applications/infra/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql-app
  namespace: check-out
spec:
  replicas: 1
  selector:
    matchLabels:
      name: postgresql-app
  template:
    metadata:
      labels:
        name: postgresql-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - k3s-node-a
      containers:
        - name: postgresql-app
          image: postgres:16
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgresql-app-pvc
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgresql-app-pvc
          persistentVolumeClaim:
            claimName: postgresql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql-svc
  namespace: check-out
spec:
  type: NodePort
  selector:
    name: postgresql-app
  ports:
    - port: 5432
      targetPort: 5432
      name: mysql
      nodePort: 32432
