applications/infra/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
  labels:
    name: kubernetes-dashboard-ingress
spec:
  tls:
    secretName: dashboard-check-out-tls
  entryPoints:
  - websecure
  routes:
  - match: Host(`dashboard.check-out.paperst.ar`)
    kind: Rule
    # middlewares:
    # - name: check-out-redirect-middleware
    #   namespace: check-out
    services:
    - name: kubernetes-dashboard-kong-proxy
      port: 443
      serversTransport: kubernetes-dashboard-transport
